# struct_gen

./: README.md  pyproject.toml
src/struct_gen/: __init__.py  struc.py  translate.py
