[project]
name = "struct-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khan Kibria", email = "khan.kibria@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
struct-gen = "struct_gen.struc:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
